--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,8 @@ Metrics/AbcSize:
   Max: 25
   Exclude:
     - 'spec/support/**/*.rb'
+Metrics/MethodLength:
+  Enabled: false
 
 Rails/HasAndBelongsToMany:
   Enabled: false
@@ -44,6 +46,7 @@ Style/MixinUsage:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
+
 
 AllCops:
   TargetRubyVersion: 3.1.0
