--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,9 @@ Metrics/AbcSize:
   Max: 50
   Exclude:
     - 'spec/support/**/*.rb'
+Metrics/BlockLength:
+  Exclude:
+    - 'lib/**/*.*'
 Metrics/MethodLength:
   Enabled: false
 
